2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/compat.texi: more compatible distributions
	* acinclude.m4: add strbcm package by default
	* AUTHORS: updated release files
	* NEWS: updated release files
	* doc/manual/news.texi: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* scripts/texi/compat.texi: updated release files
	* THANKS: updated release files

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* m4/dist.m4: corrections for better Ubunutu detection

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* openss7.spec.in: make GPL version more obvious

2007-04-15  Brian Bidulock  <bidulock@openss7.org>

	* configure.fast: do not disable rt threads

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* configure.fast: convenience configure script from testing
	* configure.test: convenience configure script from testing
	* configure.norm: added convenience configure script

2007-04-04  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: provide --enable-k-none configure option to permit
	  kernel debugging to be suppressed altogether (for optimization
	  testing and profiling).

2007-03-26  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: need GNU gettext version 0.16.1 cause it is built for autoconf 2.61
	* am/info.am: updated to install html images properly (needs autoconf 2.61 and automake 1.10)
	* am/openss7.am: updated to install html images properly (needs autoconf 2.61 and automake 1.10)
	* scripts/texi/install.texi: require autoconf 2.61 and automake 1.10
	* scripts/texi/testsuite.texi: require autoconf 2.61 and automake 1.10
	* texi/install.texi: require autoconf 2.61 and automake 1.10
	* texi/testsuite.texi: require autoconf 2.61 and automake 1.10

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: added support for 2.6.20-1.2307.fc5
	* scripts/texi/compat.texi: added support for 2.6.20-1.2307.fc5
